Update language package for French support
Replaced polyglossia package with babel for French language support.

--- a/styles/template.tex
+++ b/styles/template.tex
@@ -6,8 +6,7 @@
 
 % ---------- Fonts & language (French) ----------
 \usepackage{fontspec}
-\usepackage{polyglossia}
-\setdefaultlanguage{french}
+\usepackage[french]{babel}
 
 % A TeX Live–available serif font (safe in CI containers)
 \setmainfont{TeX Gyre Pagella}
