Update font settings in template.tex
Added font encoding and input encoding packages, and changed the main font to Latin Modern.

--- a/styles/template.tex
+++ b/styles/template.tex
@@ -9,9 +9,9 @@
 \usepackage[french]{babel}
 
 % A TeX Live–available serif font (safe in CI containers)
-\setmainfont{TeX Gyre Pagella}
-\setsansfont{TeX Gyre Heros}
-\setmonofont{DejaVu Sans Mono}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage{lmodern} % Latin Modern (toujours dispo)
 
 % ---------- Layout ----------
 \usepackage{geometry}
